# homework

./: .gitignore  README.md  template.tex
algo/contest/hw1/: a.cpp  c.cpp
algo/contest/hw2/: a.cpp  b.cpp  d.cpp
algo/contest/theormin1/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
algo/contest/theormin2/: d.cpp
algo/hw/additional/: afanasev.tex
algo/hw/hw12/: hw12.tex
algo/hw/hw3/: hw3.tex
algo/hw/hw5/: tmp.tex
algo/hw/hw9/: hw9.tex
algo/hw2/: algo_hw2.tex
algo/hw5/: hw5.tex
algo/hw6/: hw6.tex
combinatorics/hw1/: hw1.tex
combinatorics/hw2/: hw2.tex
combinatorics/hw3/: hw3.tex
combinatorics/hw6/: hw6.tex
combinatorics/hw7/: hw7.tex
combinatorics/hw8/: hw8.tex
combinatorics/hw9/: hw9.tex
cpp/hw/interpreter/: grammar.txt  grammar_2.txt  grammar_bak.txt  grammar_draft
cpp/hw/visitor/: Evaluator.cpp  Nodes.h  Printer.cpp  Visitor.h  main.cpp
cpp/lab/lab10/: Rational.h
cpp/lab/lab11/: main.cpp
cpp/lab/lab12/: Makefile  test.cpp
cpp/lab/lab3/: main.bak.cpp  main.cpp
cpp/lab/lab4/: main.cpp
cpp/lab/lab5/: Makefile  MyVector.cpp  main.cpp
cpp/lab/lab6/: Makefile
cpp/lab/lab7/: Makefile  myString.cpp  myString.h
cpp/lab/lab8/: MyOfstream.h
english/: Anton Afanasev.docx
fall_2013/algo/review/: T1.C.cpp
fall_2013/combinatorics/hw1/: hw1.tex
fall_2013/combinatorics/hw2/: hw2.tex
fall_2013/combinatorics/hw3/: hw3.tex
fall_2013/combinatorics/hw4/: hw4.tex
fall_2013/combinatorics/hw5/: hw5.tex
fall_2013/graph/hw1/: hw1.tex
fall_2013/graph/hw4/: hw4.tex
fall_2013/graph/hw5/: hw5.tex
fall_2013/graph/hw7/: hw7.tex
fall_2013/mathlog/hw2/: hw2.tex
fall_2013/mathlog/hw3/: test.py
fall_2013/mathlog/hw4/: hw4.tex
fall_2013/mathlog/hw5/: commands.tex  hw5.tex
fall_2013/mathlog/hw6/: hw6.tex
fall_2013/mathlog/hw7/: hw7.tex
fall_2013/python/hw1/: book1.txt  z2.py
fall_2013/python/hw2/: z1.py  z2.py  z4.py
fall_2013/python/hw3/: z3.py
fall_2013/python/hw4/: metaclass.py
fall_2013/python/lab1/: 4.py  z3.py  z6.py
fall_2013/python/lab2/: z1.py  z3.py
fall_2013/python/test/: A.txt  z1.py  z2.py  z3.py
fall_2014/cg/hw0/: CMakeLists.txt
fall_2014/cg/hw0/shaders/: fractal.glslfs  fractal.glslvs  triangle.glslfs  triangle.glslvs
fall_2014/cg/hw0/src/: fractal.cpp  fractal.h  main_fractal.cpp  main_triangle.cpp  shader.cpp  triangle_demo.cpp  triangle_demo.h
fall_2014/cg/hw1/: CMakeLists.txt
fall_2014/cg/hw1/shaders/: model.glslfs  model.glslvs  model_wave_color.glslfs  model_wave_color.glslvs
fall_2014/cg/hw1/src/: common.h  main.cpp  model.cpp  model.h  shader.h
fall_2014/cl/hw1/: hw1.sln
fall_2014/cl/hw2/: .gitignore  hw2.sln
fall_2014/cv/: hw1.py  hw2.py  hw3.py  hw4.py  hw5.py
fall_2014/grammar/hw1/: hw1.tex
fall_2014/grammar/hw2/: hw2.tex
fall_2014/network/hw2/: Makefile
fall_2014/scala/: .gitignore
fall_2014/scala/clojure/: .gitignore
fall_2014/scala/task01/: .gitignore
fall_2014/scala/task03/: .gitignore
fall_2014/stat/: .gitignore
fall_2014/stat/hw1/: hw1.Rnw
fall_2014/stat/hw2/: hw2.Rnw
fall_2014/stat/hw3/: hw3.Rnw
fall_2014/stat/hw4/: hw4.Rnw
fall_2014/stat/hw4_2/: hw4_2.Rnw
graph/hw2/: hw2.tex
graph/hw3/: hw3.tex
graph/hw6/: hw6.tex
mathlog/hw1/: hw1.tex
mathlog/hw2/: commands.tex  hw2.tex
mathlog/hw3/: commands.tex  hw3.tex  sample_proof.tex
mathlog/hw5/: commands.tex  hw5.tex  sample_proof.tex
python/PIL-project/: PuzzleSolver.py  main.py  metrics.py
python/hw1/: z1.py  z3.py
python/hw2/: z1.py  z2.py  z3.py
python/hw3/: z1.py  z2.py
python/hw4/: file decorator.py  singleton.py
python/lab1/: z1.py  z2.py  z4.py  z5.py
python/lab2/: z2.py
python/test/: z4.py
spring_2014/algo/code_review/: afanasev_T1521.cpp
spring_2014/algo/contest/: cats.cpp  fft.cpp  maxflow.cpp
spring_2014/algo/cw/: cw.tex
spring_2014/algo/hw1/: afanasev_stars.cpp  hw1.tex
spring_2014/algo/hw10/: afanasev_1449.cpp  hw10.tex
spring_2014/algo/hw11/: hw11.tex
spring_2014/algo/hw12/: hw12.tex
spring_2014/algo/hw2/: 1439.cpp  hw2.tex  swapper.cpp
spring_2014/algo/hw3/: 1521_splay.cpp  1521_treap.cpp  hw3.tex
spring_2014/algo/hw4/: hw4.tex
spring_2014/algo/hw5/: hw5.tex  lca.cpp  rmq.cpp
spring_2014/algo/hw6/: hw6.tex
spring_2014/algo/hw7/: hw7.tex
spring_2014/algo/hw8/: hw8.tex
spring_2014/algo/hw9/: hw9.tex
spring_2014/combinatorics/hw1/: hw1.tex
spring_2014/combinatorics/hw2/: hw2.tex
spring_2014/combinatorics/hw3/: hw3.tex
spring_2014/combinatorics/hw4/: hw4.tex
spring_2014/combinatorics/hw5/: hw5.tex
spring_2014/combinatorics/hw6/: hw6.tex
spring_2014/combinatorics/upsolving/: up.tex
spring_2014/cpp/hw1/: Makefile  main.cpp
spring_2014/cpp/hw2/: Makefile
spring_2014/fp/hw1/: hw1.tex
spring_2014/fp/hw2/: hw2.tex
spring_2014/fp/hw3/: hw3.tex
spring_2014/fp/hw4/: afanasev_hw04.hs
spring_2014/fp/hw5/: hw05.hs  newer.hs
spring_2014/fp/hw6/: Expr.hs  Main.hs  MapLike.hs  Nat.hs  Tree.hs
spring_2014/fp/hw7/: 2.hs  4.hs  Behaviour.hs  cat.hs  echo.hs  grep.hs
spring_2014/fp/hw8/: App.hs  Combinators.hs  Main.hs  Parser.hs
spring_2014/fp/hw9/: Fisole.hs  Main.hs  Philosophers.hs
spring_2014/os/1/: Makefile
spring_2014/os/2/: Makefile
spring_2014/os/3/: Makefile
spring_2014/os/4/: Makefile
spring_2014/os/5/: Makefile
unix/hw/hw2/: z2.sh  (+2 more)
(+224 files in other folders)
